se edita nombvre archivos js y html, se edita link de scripts

--- a/color4.html
+++ b/color4.html
@@ -31,7 +31,7 @@
         </div>
         <p id="alert"></p>
     </div>
-    <script src="assets/js/4_color.js"></script>
+    <script src="assets/js/color4.js"></script>
 </body>
 
 </html>
