--- a/funcion1.html
+++ b/funcion1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="assets/js/2_arrow.js"></script>
+    <script src="assets/js/funcion1.js"></script>
 </body>
 </html>
