--- a/arrow2.html
+++ b/arrow2.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="ele2"> 3.1 </div>
-    <div id="ele3"> 3.2 </div>
-<script src="assets/js/3_script.js"></script> 
+    <script src="assets/js/arrow2.js"></script>
 </body>
 </html>
