--- a/pintar3.html
+++ b/pintar3.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="assets/js/1_funcion.js"></script>
+    <div id="ele2"> 3.1 </div>
+    <div id="ele3"> 3.2 </div>
+<script src="assets/js/script3.js"></script> 
 </body>
 </html>
